View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028096 | Open CASCADE | OCCT:Coding | public | 2016-11-13 08:58 | 2016-12-09 16:39 |
Reporter | abv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028096: VC14 compiler warnings on 7.1.0.beta | ||||
Description | Compilation of OCCT 7.1.0.beta by VC++ 14 produces several warnings on local variable hiding another variable with the same name defined in outer scope. | ||||
Steps To Reproduce | Compile with VS2015 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28096 has been created by abv. SHA-1: 4debe23edd260d36845cfa420cdecaec6a01f9b9 Detailed log of new commits: Author: abv Date: Sun Nov 13 09:00:33 2016 +0300 0028096: VC14 compiler warnings of 7.1.0.beta Warnings are eliminated |
|
Fix is pushed to CR28096, please review |
|
Please test the patch. |
|
Branch CR28096 has been updated by abv. SHA-1: 53d8092f97392e2ae1197ab94ff51a3e371eb2f6 Detailed log of new commits: Author: abv Date: Mon Nov 14 09:50:23 2016 +0300 // minor corrections in headers |
|
Dear BugMaster, Branch CR28096 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 53d8092f97392e2ae1197ab94ff51a3e371eb2f6 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 Windows: 0 MacOS: 1122 Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 91462921 / 91845686 [-0.42%] Total CPU difference: 21469.210000000236 / 21473.29000000031 [-0.02%] Testing on Windows: Total MEMORY difference: 56576195 / 56597852 [-0.04%] Total CPU difference: 19698.215069798473 / 19669.510885798518 [+0.15%] |
|
VC14 compilation warnings have not been detected. Problem is fixed. |
|
Branch CR28096 has been deleted by kgv. SHA-1: 53d8092f97392e2ae1197ab94ff51a3e371eb2f6 |
occt: master 45d0af05 2016-11-17 12:14:19 Committer: apn Details Diff |
0028096: VC14 compiler warnings of 7.1.0.beta Warnings are eliminated // minor corrections in headers |
Affected Issues 0028096 |
|
mod - src/BRepBuilderAPI/BRepBuilderAPI_FastSewing.hxx | Diff File | ||
mod - src/BRepOffset/BRepOffset_MakeOffset_1.cxx | Diff File | ||
mod - src/IntWalk/IntWalk_PWalking.cxx | Diff File | ||
mod - src/Select3D/Select3D_SensitiveBox.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-13 08:58 | abv | New Issue | |
2016-11-13 08:58 | abv | Assigned To | => kgv |
2016-11-13 09:01 | git | Note Added: 0060263 | |
2016-11-13 09:02 | abv | Note Added: 0060264 | |
2016-11-13 09:02 | abv | Status | new => resolved |
2016-11-13 09:02 | abv | Steps to Reproduce Updated | |
2016-11-13 09:02 | abv | Product Version | => 7.1.0 |
2016-11-13 09:02 | abv | Target Version | 7.2.0 => 7.1.0 |
2016-11-13 09:02 | abv | Summary | VC14 compiler warnings of 7.1.0.beta => VC14 compiler warnings on 7.1.0.beta |
2016-11-13 12:07 | kgv | Note Added: 0060265 | |
2016-11-13 12:07 | kgv | Assigned To | kgv => bugmaster |
2016-11-13 12:07 | kgv | Status | resolved => reviewed |
2016-11-14 09:50 | git | Note Added: 0060275 | |
2016-11-14 13:30 | apn | Assigned To | bugmaster => apn |
2016-11-15 12:25 |
|
Test case number | => Not needed |
2016-11-15 12:26 |
|
Note Added: 0060342 | |
2016-11-15 12:26 |
|
Assigned To | apn => bugmaster |
2016-11-15 12:26 |
|
Status | reviewed => tested |
2016-11-15 12:27 |
|
Note Added: 0060343 | |
2016-11-18 16:37 | apn | Changeset attached | => occt master 45d0af05 |
2016-11-18 16:37 | apn | Assigned To | bugmaster => apn |
2016-11-18 16:37 | apn | Status | tested => verified |
2016-11-18 16:37 | apn | Resolution | open => fixed |
2016-12-07 11:31 | git | Note Added: 0061291 | |
2016-12-09 16:29 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |