0028096: VC14 compiler warnings of 7.1.0.beta

Warnings are eliminated
// minor corrections in headers