src/BRepBuilderAPI/BRepBuilderAPI_FastSewing.hxx
@@ -299,6 +299,6 @@ private:
   FS_VARStatuses myStatusList;
 };
 
-#endif // _BRepBuilderAPI_FastSewing_HeaderFile
-
 DEFINE_STANDARD_HANDLE(BRepBuilderAPI_FastSewing, Standard_Transient)
+
+#endif // _BRepBuilderAPI_FastSewing_HeaderFile
